# py-rcsb_utils_citation

./: HISTORY.txt  LOGOTX  MANIFEST.in  README.md  azure-pipelines.yml  azure-template-publish-job.yml  azure-template-tox-job.yml  pylintrc  pyproject.toml  requirements.txt  setup.py  tox.ini
rcsb/utils/citation/: CitationReferenceProvider.py  JournalTitleAbbreviationProvider.py  PubMedReader.py  PubMedUtils.py  pubmed-example.xml
rcsb/utils/tests-citation/: PubMedUtilsTests.py  testCitationReferenceProvider.py  testJournalTitleAbbreviationProvider.py  testPubMedUtils.py
