[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rcsb.utils.citation"
description = "RCSB Python Wrapper Module for Citation Utilities"
readme = "README.md"
authors = [
    { name="John Westbrook", email="john.westbrook@rcsb.org" }
]
maintainers = [
    { name="Dennis Piehl", email="dennis.piehl@rcsb.org" }
]
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "rcsb.utils.io>=1.52",
    "nltk>=3.9.1",
    "regex>=2024.11.7",
]
dynamic = ["version"]

[project.optional-dependencies]
tests = ["tox", "pylint", "black>=21.5b1", "flake8", "coverage"]

[project.urls]
Homepage = "https://github.com/rcsb/py-rcsb_utils_citation"

# ----------------  hatch configuration ----------------
[tool.hatch.version]
path = "rcsb/utils/citation/__init__.py"

[tool.hatch.build]
exclude = [
    "/rcsb/utils/test*/**",
    "/rcsb/mock-*/**",
    "test*/**"
]

[tool.hatch.build.targets.sdist]
include = [
    "/rcsb/**",
    "/README.md",
    "/LICENSE",
    "/HISTORY.txt",
    "/pyproject.toml"
]

[tool.hatch.build.targets.wheel]
packages = ["rcsb"]

[tool.hatch.envs.default]
skip-install = true

# ----------------  test configuration ----------------
[tool.hatch.envs.hatch-test]
dependencies = ["tox"]

[tool.hatch.envs.hatch-test.scripts]
run = ["tox"]

# ----------------  UV configuration ----------------
# Add this to prevent uv from automatically creating venvs within individual packages when running 'uv run ...' from within the package directory
[tool.uv]
managed = false
